force-app/main/default/objects/PortalInventory__c/fields/Chassis_Price__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Price__c</fullName>
    <label>Chassis Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>