force-app/main/default/objects/PortalInventory__c/fields/Conversion_Part__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversion Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PortalInventory (Conversion Part)</relationshipLabel>
    <relationshipName>Conversion_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>