force-app/main/default/objects/PortalInventory__c/fields/Conversion_Price__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Price__c</fullName>
    <label>Conversion Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>