force-app/main/default/objects/PortalInventory__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>