force-app/main/default/objects/PortalInventory__c/fields/Total_Not_On_Hold_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Not_On_Hold_Inventory__c</fullName>
    <description>BC-351 sum of inventory items that are not on application hold (e.g. not part of wav configuration)</description>
    <inlineHelpText>BC-351 sum of inventory items that are not on application hold (e.g. not part of wav configuration)</inlineHelpText>
    <label>Total Not On Hold Inventory</label>
    <summarizedField>PortalInventoryDetail__c.Available_Inventory__c</summarizedField>
    <summaryFilterItems>
        <field>PortalInventoryDetail__c.Application_Hold__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>PortalInventoryDetail__c.PortalInventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>